--- a/css/styles.css
+++ b/css/styles.css
@@ -18,23 +18,23 @@
 }
 body {
     box-sizing: border-box;
-    font-family: Roboto, sans-serif;
     background-color: var(--background-color);
     color: var(--primary-text-color);
     font-size: 16px;
+    font-family: Roboto, sans-serif;
     line-height: 1.5;
 }
 .visually-hidden {
     position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
     width: 1px;
     height: 1px;
     margin: -1px;
-    border: 0;
     padding: 0;
+    border: 0;
     white-space: nowrap;
     clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
 }
 .section {
     padding-top: 120px;
@@ -59,8 +59,8 @@ body {
 }  */
 .list-doing {
     display: flex;
-    justify-content: center;
     gap: 24px;
+    justify-content: center;
 }
 h1,
 h2,
@@ -76,19 +76,19 @@ ul {
 }
 img {
     display: block;
+    flex-wrap: wrap;
     max-width: 100%;
     height: auto;
-    flex-wrap: wrap;
 } 
 .page-header {
-    background-color: var(--background-color);
-    color: var(--title-text-color);
+    margin: 0 auto;
     margin-top: 0px;
     margin-bottom: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
     border-bottom: 1px solid var(--accent-color);
-    margin: 0 auto;
+    background-color: var(--background-color);
+    color: var(--title-text-color);
 }
 .list {
     list-style: none;
@@ -97,21 +97,21 @@ img {
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
-    text-align: center;
     justify-content: center;
+    text-align: center;
 }
 .team-worker {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 /* .team-worker {
     flex-basis: calc((100% - (24px * 3)) / 4);
 } */
 .nav-header .link {
+    color: var(--title-text-color);
     font-weight: 500;
     line-height: 1.5;
-    text-decoration: none;
-    color: var(--title-text-color);   
+    text-decoration: none;   
 }
 .logo-link,
 .link-cards,
@@ -126,41 +126,41 @@ img {
     color: var(--primary-brand-color);
 }
 .logo-link {
-    color: var(--primary-brand-color);
-    font-size: 18px;
-    font-family: Raleway;
-    font-weight: 800;
-    line-height: 1.3;
     padding-top: 24px;
     padding-bottom: 24px;
+    color: var(--primary-brand-color);
+    font-weight: 800;
+    font-size: 18px;
+    font-family: Raleway;
+    line-height: 1.3;
 }
 .logo-dark {
     color: var(--title-text-color);
+    font-weight: 800;
     font-size: 18px;
     font-family: Raleway;
-    font-weight: 800;
     line-height: 1.3;
 }
 .nav-header {
     display: flex;
-    color: var(--title-text-color);
-    font-family: inherit;
-    font-weight: 500;
-    list-style: none;
     align-items: center;
+    color: var(--title-text-color);
+    list-style: none;
+    font-weight: 500;
+    font-family: inherit;
 }
 .nav-header .item:not(:last-child) {
     margin-right: 40px;  
 }
 .nav-header.list {
-    padding: 24px 0;
     margin-left: 76px;
+    padding: 24px 0;
 }
 .header-container {
     display: flex;
+    justify-content: center;
     align-items: center;
-    height: 72px;
-    justify-content: center;  
+    height: 72px;  
 }
 .list-address {
     display: flex;
@@ -171,68 +171,68 @@ img {
     margin-right: 40px;
 }
 .mail {
-    font-family: inherit;
-    font-style: normal;
-    line-height: 1.5;
-    text-decoration: none;
+    padding: 24px 0;
     color: var(--primary-text-color);
-    padding: 24px 0; 
+    font-style: normal;
+    font-family: inherit;
+    line-height: 1.5;
+    text-decoration: none; 
 }
 .phone-link {
-    font-family: inherit;
+    padding: 24px 0;
+    color: var(--primary-text-color);
     font-style: normal;
+    font-family: inherit;
     line-height: 1.5;
     text-decoration: none;
-    color: var(--primary-text-color);
-    padding: 24px 0;
 }
 .hero-title {
     color: var(--second-text-color);
-    font-style: normal;
     font-weight: 700;
+    font-style: normal;
     font-size: 56px;
     line-height: 1.07;
 }
 .hero {
-    background-color: var(--title-text-color);
+    max-width: 1440px;
     margin: 0 auto;
-    text-align: center;
+    margin-top: 0px;
     padding-top: 188px;
     padding-bottom: 188px;
-    margin-top: 0px;
+    background-color: var(--title-text-color);
     
     background-image: linear-gradient(
     rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)),
     url("../images2/people-office\ 1.jpg");
-    background-repeat: no-repeat;
     /* background-size: auto; */
     background-position: center;
-    max-width: 1440px;      
+    background-repeat: no-repeat;
+    text-align: center;      
 }
 .btn.hero-button {
-    background-color: var(--primary-brand-color);
-    color: var(--second-text-color);
-    border: none;
+    vertical-align: middle;
     min-width: 169px;
     height: 56px;
+    margin-top: 48px;
     padding: 16px 32px;
-    text-align: center;
-    vertical-align: middle;
-    margin-top: 48px;   
+    border: none;
+    background-color: var(--primary-brand-color);
+    color: var(--second-text-color);
+    text-align: center;   
 }
 .btn.one:hover, 
 .btn.one:focus {   
 background-color: var(--pressed-state-color);
 }
 .section-title {
+    margin-bottom: 72px;
+    padding-top: 0;
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
-    text-align: center;
-    padding-top: 0;
-    margin-bottom: 72px;    
+    text-align: center;    
 }
 .section-doing {
     padding-top: 0px;
@@ -243,18 +243,18 @@ background-color: var(--pressed-state-color);
     margin-right: 0px;
 }
 .section-team {
-    background-color: var(--light-color);
     margin-bottom: 0px;
-    padding-bottom: 120px; 
+    padding-bottom: 120px;
+    background-color: var(--light-color); 
 }
 .team > li {
     background-color: var(--background-color);
 }
 .worker {
+    color: var(--title-text-color);
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
-    color: var(--title-text-color);
 }
 .worker-title {
     margin-top: 8px;
@@ -262,24 +262,24 @@ background-color: var(--pressed-state-color);
     text-align: center;  
 }
 .list-title {
-color: var(--title-text-color);
-font-size: 20px;
-font-weight: 500;
-line-height: 1.2;
 margin-top: 8px;
 margin-bottom: 8px;
+color: var(--title-text-color);
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
 }
 
 .feature-icon {
     display: flex;
     width: 264px;
     height: 112px;
-    background-color: var(--light-color);
     padding: 24px 100px;
+    background-color: var(--light-color);
 }
 .team-content {
-    padding: 32px 16px;
     width: 264px;
+    padding: 32px 16px;
 }
 .section-customers {
     padding-top: 130px;
@@ -291,27 +291,27 @@ margin-bottom: 8px;
 }  
 .customer-link {
     display: flex;
-    fill: var(--subtle-text-color);
     justify-content: center;
     align-items: center;
     width: 168px;
     height: 88px;
+    padding: 16px 32px;
     border: 1px solid var(--subtle-text-color);
     border-radius: 4px;
-    padding: 16px 32px;
+    fill: var(--subtle-text-color);
 } 
 .customer-link:hover,
 .customer-link:focus {
-    fill: var(--pressed-state-color);
     border: 1px solid var(--pressed-state-color);
+    fill: var(--pressed-state-color);
 }
 .footer {
-    background-color: var(--title-text-color);
-    color: var(--accent-color);
     height: 310px;
+    margin: 0 auto;
     padding-top: 100px;
     padding-bottom: 100px;
-    margin: 0 auto;
+    background-color: var(--title-text-color);
+    color: var(--accent-color);
 }
 .wrapper {
     display: flex;
@@ -328,14 +328,13 @@ margin-bottom: 8px;
     gap: 24px;
     justify-content: center;
 }  
-
 .social-link {
     display: flex;
     width: 40px;
     height: 40px;
-    background-color: var(--primary-brand-color);
-    border-radius: 50%;
     padding: 12px;
+    border-radius: 50%;
+    background-color: var(--primary-brand-color);
     fill: var(--background-color);
 }
 .social-link:hover,
@@ -346,9 +345,9 @@ margin-bottom: 8px;
     display: flex;
     width: 40px;
     height: 40px;
-    background-color: var(--primary-text-color);
-    border-radius: 50%;
     padding: 8px;
+    border-radius: 50%;
+    background-color: var(--primary-text-color);
     fill: var(--background-color);  
 }
 .social-link_footer:hover,
@@ -358,52 +357,54 @@ margin-bottom: 8px;
 /* portfolio */
 .btn {    
     display: inline-block;
-    background-color: var(--accent-color);
-    color: var(--primary-brand-color);
-    font-family: Roboto;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
+    padding: 12px 24px;
     border: 1px solid var(--accent-color);
     border-radius: 4px;
+    background-color: var(--accent-color);
+    color: var(--primary-brand-color);
+    font-weight: 500;
+    font-size: 16px;
+    font-family: Roboto;
+    line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
-    padding: 12px 24px;
 }
 .btn:hover,
 .btn:focus {
     background-color: var(--pressed-state-color);
     color: var(--second-text-color);
+    box-shadow: 0px 2px rgba(46, 47, 66, 0.12),
+    0px 2px rgba(46, 47, 66, 0.08), 0px 3px rgba(46, 47, 66, 0.01);
 }
 .btn-list {
     display: flex;
-    margin-bottom: 72px;
     justify-content: center;
     align-items: center;
+    margin-bottom: 72px;
 }
 .btn-list > .btn-item:not(:last-child) {
     margin-right: 24px;
 }
 .logo-link.bottom {
+    padding: 0;
     color: var(--primary-brand-color);
+    font-weight: 800;
     font-size: 18px;
     font-family: Raleway;
-    font-weight: 800;
-    line-height: 1.3;
-    padding: 0;   
+    line-height: 1.3;   
 }
 .logo-light {
     color: var(--second-text-color);
+    font-weight: 800;
     font-size: 18px;
     font-family: Raleway;
-    font-weight: 800;
     line-height: 1.3;
 }
 .apps {
+color: var(--title-text-color);
 font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
-color: var(--title-text-color);
 }
 .img-title {
     margin-top: 8px;
@@ -423,8 +424,8 @@ color: var(--title-text-color);
 .list-portfolio {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 24px;
     row-gap: 48px;
+    column-gap: 24px;
 }
 .link-cards {
     display: block;
@@ -434,6 +435,6 @@ color: var(--title-text-color);
 .link-cards:hover,
 .link-cards:focus {
     border: 0.5px solid var(--accent-color);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 2px rgba(46, 47, 66, 0.08),
+    0px 1px rgba(46, 47, 66, 0.16), 0px 1px rgba(46, 47, 66, 0.08);
 }
